--- a/css/estilos.css
+++ b/css/estilos.css
@@ -234,7 +234,7 @@ header nav ul li a:hover {
 
 .casos {
   height: auto;
-  background-image: url(/img/relojarena.png);
+  background-image: url(../img/relojarena.png);
   background-position: right;
   background-size: auto;
   background-repeat: no-repeat;
@@ -290,7 +290,7 @@ header nav ul li a:hover {
 
 .presentacion-topicos {
   height: 100vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/img/persona-mente.gif);
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/persona-mente.gif);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -490,7 +490,7 @@ header nav ul li a:hover {
 
 .portada-contacto {
   height: 100vh;
-  background: linear-gradient(rgba(142, 142, 142, 0.671), rgba(33, 33, 33, 0.6)), url(/img/topicos-img.gif);
+  background: linear-gradient(rgba(142, 142, 142, 0.671), rgba(33, 33, 33, 0.6)), url(../img/topicos-img.gif);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -565,7 +565,7 @@ header nav ul li a:hover {
 
 .ayuda {
   min-height: 800px;
-  background-image: url(/img/cerebro.gif);
+  background-image: url(../img/cerebro.gif);
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
