--- a/scss/componentes/_main.scss
+++ b/scss/componentes/_main.scss
@@ -162,7 +162,7 @@
 //*Sección Casos
 .casos {
     height: auto;
-    background-image: url(/img/relojarena.png);
+    background-image: url(../img/relojarena.png);
     background-position: right;
     background-size: auto;
     background-repeat: no-repeat;
@@ -231,7 +231,7 @@
 //*Sección Presentacion Tópicos
 .presentacion-topicos {
     height: 100vh;
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/img/persona-mente.gif);
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/persona-mente.gif);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -470,7 +470,7 @@
 //*Sección Portada Contacto
 .portada-contacto {
     height: 100vh;
-    background: linear-gradient(rgba(142, 142, 142, 0.671), rgba(33, 33, 33, 0.6)), url(/img/topicos-img.gif);
+    background: linear-gradient(rgba(142, 142, 142, 0.671), rgba(33, 33, 33, 0.6)), url(../img/topicos-img.gif);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -555,7 +555,7 @@
 //*Sección Ayuda
 .ayuda {
     min-height: 800px;
-    background-image: url(/img/cerebro.gif);
+    background-image: url(../img/cerebro.gif);
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
